--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -758,7 +758,7 @@ LeadScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-                    Container11 As groupContainer.horizontalAutoLayoutContainer:
+                    ctnleaddateLdS As groupContainer.horizontalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =50
@@ -767,13 +767,13 @@ LeadScreen As screen:
                         LayoutMode: =LayoutMode.Auto
                         ZIndex: =1
 
-                        Label12 As label:
+                        lblleaddateLdS As label:
                             FontWeight: =FontWeight.Bold
                             Text: ="Lead Created Date "
                             Width: =200
                             ZIndex: =1
 
-                        Label13 As label:
+                        lblleaddatevalueldS As label:
                             FillPortions: =1
                             Text: |-
                                 =Text(glryleadlistLS.Selected.'Created On',"yyyy/mm/dd hh:mm AM/PM")
