--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -779,7 +779,7 @@ LeadScreen As screen:
                                 =Text(glryleadlistLS.Selected.'Created On',"yyyy/mm/dd hh:mm AM/PM")
                             ZIndex: =2
 
-                    icnleadinfoleaddetailsLdS_1 As icon.Add:
+                    icnleadinfoleaddetailsLdS As icon.Add:
                         Color: =RGBA(217, 217, 217, 1)
                         Fill: =RGBA(217, 217, 217, 1)
                         Height: =2
@@ -787,7 +787,7 @@ LeadScreen As screen:
                         Width: =Parent.Width-20
                         ZIndex: =2
 
-                    Container11_1 As groupContainer.horizontalAutoLayoutContainer:
+                    ctnleadstatusLdS As groupContainer.horizontalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =50
@@ -796,13 +796,13 @@ LeadScreen As screen:
                         LayoutMode: =LayoutMode.Auto
                         ZIndex: =3
 
-                        Label12_1 As label:
+                        lblleadstatusldS As label:
                             FontWeight: =FontWeight.Bold
                             Text: ="Lead Status "
                             Width: =200
                             ZIndex: =1
 
-                        Label13_1 As label:
+                        lblleadstatusLdS As label:
                             FillPortions: =1
                             Text: =glryleadlistLS.Selected.LeadStatus
                             ZIndex: =2
