--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -815,7 +815,7 @@ LeadScreen As screen:
                         Width: =Parent.Width-20
                         ZIndex: =4
 
-                    Container11_2 As groupContainer.horizontalAutoLayoutContainer:
+                    ctnleadstatusdateLdS As groupContainer.horizontalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =50
@@ -844,7 +844,7 @@ LeadScreen As screen:
                         Width: =Parent.Width-20
                         ZIndex: =6
 
-                    Container11_3 As groupContainer.horizontalAutoLayoutContainer:
+                    ctncontractnoLdS As groupContainer.horizontalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =50
@@ -872,7 +872,7 @@ LeadScreen As screen:
                         Width: =Parent.Width-20
                         ZIndex: =8
 
-                    Container11_4 As groupContainer.horizontalAutoLayoutContainer:
+                    ctnbuildingnameLdS As groupContainer.horizontalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =50
