--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -503,7 +503,7 @@ LeadScreen As screen:
                     Y: =glrychatmessageLdS.Height+glrychatmessageLdS.Y
                     ZIndex: =4
 
-            ctnapproverejectLdS_1 As groupContainer.manualLayoutContainer:
+            ctnapproverejectLdS As groupContainer.manualLayoutContainer:
                 BorderColor: =RGBA(0, 0, 0, 0.16)
                 BorderThickness: =2
                 Fill: =RGBA(249, 249, 249, 1)
@@ -1163,7 +1163,7 @@ LeadScreen As screen:
                         LayoutMode: =LayoutMode.Auto
                         ZIndex: =31
 
-                        Container12 As groupContainer.verticalAutoLayoutContainer:
+                        ctnvertcheckboxesLdS As groupContainer.verticalAutoLayoutContainer:
                             AlignInContainer: =AlignInContainer.SetByContainer
                             FillPortions: =0
                             Height: =600
@@ -1173,7 +1173,7 @@ LeadScreen As screen:
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =1
 
-                            chbxunitdownLdS_1 As checkbox:
+                            chbxunitdownLdS As checkbox:
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1184,7 +1184,7 @@ LeadScreen As screen:
                                 Width: =Parent.Width
                                 ZIndex: =1
 
-                            chbxadditionalexpensesLdS_1 As checkbox:
+                            chbxadditionalexpensesLdS As checkbox:
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1195,20 +1195,20 @@ LeadScreen As screen:
                                 Width: =Parent.Width
                                 ZIndex: =2
 
-                            Label18 As label:
+                            lbltotalestimatedexpensesLdS As label:
                                 FontWeight: =FontWeight.Semibold
                                 Text: ="Total estimated expense"
                                 Visible: =If(glryleadlistLS.Selected.AdditionalExpensesRequired= 'AdditionalExpensesRequired (LeadInformations)'.Yes,true,false)
                                 Width: =300
                                 ZIndex: =3
 
-                            Label14 As label:
+                            lbltotalestimatedexpensesvalueLdS As label:
                                 Text: =glryleadlistLS.Selected.TotalEstimatedExpense
                                 Visible: =If(glryleadlistLS.Selected.AdditionalExpensesRequired= 'AdditionalExpensesRequired (LeadInformations)'.Yes,true,false)
                                 Width: =Parent.Width
                                 ZIndex: =4
 
-                            chbxtravelrequiredLdS_1 As checkbox:
+                            chbxtravelrequiredLdS As checkbox:
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1219,19 +1219,19 @@ LeadScreen As screen:
                                 Width: =Parent.Width
                                 ZIndex: =5
 
-                            Label19 As label:
+                            lbltotalestihoursLdS As label:
                                 FontWeight: =FontWeight.Semibold
                                 Text: ="Total estimated hours of travel"
                                 Visible: =If(glryleadlistLS.Selected.TravelRequired='TravelRequired (LeadInformations)'.Yes,true,false)
                                 Width: =300
                                 ZIndex: =6
 
-                            Label15 As label:
+                            lbltotalestihoursvalueLdS As label:
                                 Text: =glryleadlistLS.Selected.TotalEstimatedHoursofTravel
                                 Visible: =If(glryleadlistLS.Selected.TravelRequired='TravelRequired (LeadInformations)'.Yes,true,false)
                                 ZIndex: =7
 
-                            chbxcommunucationLdS_1 As checkbox:
+                            chbxcommunucationLdS As checkbox:
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1242,34 +1242,34 @@ LeadScreen As screen:
                                 Width: =Parent.Width
                                 ZIndex: =8
 
-                            Label20 As label:
+                            lblcustnameLdS As label:
                                 FontWeight: =FontWeight.Semibold
                                 Text: ="Customer name"
                                 Visible: =If(glryleadlistLS.Selected.CommunicatedToCustomer = 'CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
                                 Width: =300
                                 ZIndex: =9
 
-                            Label16 As label:
+                            lblcustnamevalueLdS As label:
                                 Text: =glryleadlistLS.Selected.'CustomerName '
                                 Visible: =If(glryleadlistLS.Selected.CommunicatedToCustomer = 'CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
                                 ZIndex: =10
 
-                            Label21 As label:
+                            lblcustcontactLdS As label:
                                 FontWeight: =FontWeight.Semibold
                                 Text: ="Customer contact"
                                 Visible: =If(glryleadlistLS.Selected.CommunicatedToCustomer = 'CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
                                 Width: =300
                                 ZIndex: =11
 
-                            Label17 As label:
+                            lblcustcontactvalueLdS As label:
                                 Text: =glryleadlistLS.Selected.'CustomerContact '
                                 Visible: =If(glryleadlistLS.Selected.CommunicatedToCustomer = 'CommunicatedToCustomer (LeadInformations)'.Yes,true,false)
                                 ZIndex: =12
 
-                        ctnphotoglryLdS_1 As groupContainer.verticalAutoLayoutContainer:
+                        ctnphotoglryLdS As groupContainer.verticalAutoLayoutContainer:
                             AlignInContainer: =AlignInContainer.SetByContainer
                             FillPortions: =2
-                            Height: =lblphotosLdS_1.Height+glryphotosLdS_1.Height+20
+                            Height: =lblphotosLdS.Height+glryphotosLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutMinHeight: =100
                             LayoutMinWidth: =250
@@ -1277,7 +1277,7 @@ LeadScreen As screen:
                             PaddingLeft: =10
                             ZIndex: =2
 
-                            lblphotosLdS_1 As label:
+                            lblphotosLdS As label:
                                 FontWeight: =FontWeight.Bold
                                 Height: =50
                                 Text: ="Photos "
@@ -1285,7 +1285,7 @@ LeadScreen As screen:
                                 Width: =Parent.Width
                                 ZIndex: =1
 
-                            "glryphotosLdS_1 As gallery.'BrowseLayout_Horizontal_TwoTextOneImageOverlayVariant_ver4.0'":
+                            "glryphotosLdS As gallery.'BrowseLayout_Horizontal_TwoTextOneImageOverlayVariant_ver4.0'":
                                 AlignInContainer: =AlignInContainer.SetByContainer
                                 FillPortions: =0
                                 Height: =230
@@ -1297,7 +1297,7 @@ LeadScreen As screen:
                                 Width: =Parent.Width-40
                                 ZIndex: =2
 
-                                imgglryphotosLdS_1 As image:
+                                imgglryphotosLdS As image:
                                     BorderColor: =RGBA(26, 26, 26, 1)
                                     BorderThickness: =2
                                     Height: =Parent.TemplateHeight -10
