--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -4,7 +4,7 @@ LeadListScreen As screen:
         =Refresh(LeadInformations);
         Set(VarPopUpInprogress,false);
         Set(VarDownIcon,true);
-        Reset(txtinptestimatenumber_1);
+        Reset(txtinptestimatenumber);
 
     ctnmainLS As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
